# EPIC_catkin_ws_for_IMX8

./: .gitignore  CMakeCache.txt  CTestConfiguration.ini  README.md
.catkin_tools/profiles/default/: config.yaml
.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/.projects/.org.eclipse.egit.core.cmp/: .location
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  setup_cached.sh
devel/: .catkin
devel/include/epic_planner/: GoalService.h  GoalServiceRequest.h  GoalServiceResponse.h
devel/include/quadrotor_msgs/: MincoTrajectory.h  MpcPositionCommand.h  PolynomialTrajectory.h  PositionCommand.h  QuadrotorState.h  ServerTime.h  TrakingPerformance.h  aec.h  ctrl.h  drone_aec_info.h  esdf_map.h  fc_to_oa.h  oa_manager_debug.h  oa_result.h  vio_result.h
devel/include/swarm_msgs/: FisheyeFrameDescriptor.h  ImageDescriptor.h  LoopEdge.h  LoopEdges.h  node_detected.h  node_detected_xyzyaw.h  node_frame.h  swarm_detected.h  swarm_drone_basecoor.h  swarm_drone_source_data.h  swarm_frame.h  swarm_fused.h  swarm_fused_relative.h  swarm_remote_command.h
devel/include/swarmcomm_msgs/: data_buffer.h  drone_network_status.h  incoming_broadcast_data.h  remote_uwb_info.h  swarm_network_status.h
devel/include/swarmtal_msgs/: drone_commander_state.h  drone_onboard_command.h  drone_pos_control_state.h  drone_pos_ctrl_cmd.h
devel/lib/epic_planner/: custom_trajectory_sampler  exploration_node
devel/lib/lkh_tsp_solver/: lkh_tsp
devel/lib/pkgconfig/: epic_planner.pc  frontier_manager.pc  lidar_map.pc  lkh_tsp_solver.pc  path_searching.pc  plan_manage.pc  pointcloud_topo.pc  poly_traj.pc  quadrotor_msgs.pc  swarm_msgs.pc  swarmcomm_msgs.pc  swarmtal_msgs.pc  traj_utils.pc
devel/lib/plan_manage/: fast_planner_node  traj_server
devel/lib/python3/dist-packages/epic_planner/srv/: _GoalService.py  __init__.py
devel/lib/python3/dist-packages/swarm_msgs/msg/: _FisheyeFrameDescriptor.py  _ImageDescriptor.py  _LoopEdge.py  _LoopEdges.py  __init__.py  _node_detected.py  _node_detected_xyzyaw.py  _node_frame.py  _swarm_detected.py  _swarm_drone_basecoor.py  _swarm_drone_source_data.py  _swarm_frame.py  _swarm_fused.py  _swarm_fused_relative.py  _swarm_remote_command.py
devel/lib/python3/dist-packages/swarmcomm_msgs/msg/: __init__.py  _data_buffer.py  _drone_network_status.py  _incoming_broadcast_data.py  _remote_uwb_info.py  _swarm_network_status.py
devel/lib/python3/dist-packages/swarmtal_msgs/msg/: __init__.py  _drone_commander_state.py  _drone_onboard_command.py  _drone_pos_control_state.py  _drone_pos_ctrl_cmd.py
devel/lib/python3/dist-packages/traj_utils/msg/: __init__.py
devel/lib/traj_utils/: process_msg
devel/share/common-lisp/ros/epic_planner/srv/: GoalService.lisp  _package.lisp  _package_GoalService.lisp  epic_planner-srv.asd
devel/share/common-lisp/ros/swarm_msgs/msg/: FisheyeFrameDescriptor.lisp  ImageDescriptor.lisp  LoopEdge.lisp  LoopEdges.lisp  _package.lisp  _package_FisheyeFrameDescriptor.lisp  _package_ImageDescriptor.lisp  _package_LoopEdge.lisp  _package_LoopEdges.lisp  _package_node_detected.lisp  _package_node_detected_xyzyaw.lisp  _package_node_frame.lisp  _package_swarm_detected.lisp  _package_swarm_drone_basecoor.lisp  _package_swarm_drone_source_data.lisp  _package_swarm_frame.lisp  _package_swarm_fused.lisp  _package_swarm_fused_relative.lisp  _package_swarm_remote_command.lisp  node_detected.lisp  node_detected_xyzyaw.lisp  node_frame.lisp  swarm_detected.lisp  swarm_drone_basecoor.lisp  swarm_drone_source_data.lisp  swarm_frame.lisp  swarm_fused.lisp  (+3 more)
devel/share/epic_planner/cmake/: epic_planner-msg-paths.cmake  epic_plannerConfig.cmake
devel/share/frontier_manager/cmake/: frontier_managerConfig.cmake
devel/share/lidar_map/cmake/: lidar_mapConfig.cmake
devel/share/lkh_tsp_solver/cmake/: lkh_tsp_solverConfig.cmake
devel/share/path_searching/cmake/: path_searchingConfig.cmake
devel/share/plan_manage/cmake/: plan_manageConfig.cmake
devel/share/pointcloud_topo/cmake/: pointcloud_topoConfig.cmake
devel/share/poly_traj/cmake/: poly_trajConfig.cmake
devel/share/quadrotor_msgs/cmake/: quadrotor_msgs-msg-extras.cmake  quadrotor_msgs-msg-paths.cmake  quadrotor_msgsConfig.cmake
devel/share/roseus/ros/epic_planner/: manifest.l
devel/share/roseus/ros/quadrotor_msgs/: manifest.l
devel/share/roseus/ros/swarm_msgs/: manifest.l
devel/share/roseus/ros/swarmcomm_msgs/: manifest.l
devel/share/roseus/ros/swarmtal_msgs/: manifest.l
devel/share/roseus/ros/traj_utils/: manifest.l
devel/share/swarm_msgs/cmake/: swarm_msgs-msg-paths.cmake  swarm_msgsConfig.cmake
devel/share/swarmcomm_msgs/cmake/: swarmcomm_msgs-msg-paths.cmake  swarmcomm_msgsConfig.cmake
devel/share/swarmtal_msgs/cmake/: swarmtal_msgs-msg-extras.cmake  swarmtal_msgs-msg-paths.cmake  swarmtal_msgsConfig.cmake
devel/share/traj_utils/cmake/: traj_utils-msg-extras.cmake  traj_utils-msg-paths.cmake  traj_utilsConfig.cmake
src/: custom_trajectory_sampler.cpp  deploy_to_target_board_v2.sh  run_host_pc copy.sh  run_host_pc.sh  run_target_board_v3-2.sh  run_target_board_v3-3.sh  setup_epic_arm.sh  sync-time.sh
src/EPIC/src/global_planner/exploration_manager/: CMakeLists.txt
src/src/EPIC/src/global_planner/exploration_manager/: CMakeLists.txt  package.xml
src/src/EPIC/src/global_planner/exploration_manager/config/: target_board_garage_v2-2.yaml  target_board_garage_v2-3.yaml
src/src/EPIC/src/global_planner/exploration_manager/include/epic_planner/: fast_exploration_fsm.h
src/src/EPIC/src/global_planner/exploration_manager/src/: fast_exploration_fsm.cpp  fast_exploration_manager.cpp  fsm_utils.cpp
(+124 files in other folders)
